# Microservices

./: .gitignore  README.md
src/auth/: Dockerfile  pyproject.toml  server.py
src/auth/manifests/: auth-deploy.yaml  secret.yaml
src/converter/: Dockerfile  consumer.py  pyproject.toml  test.mkv
src/converter/convert/: to_mp3.py
src/converter/manifests/: configmap.yaml  converter-deploy.yaml
src/gateway/: Dockerfile  pyproject.toml  server.py
src/gateway/manifests/: configmap.yaml  gateway-deploy.yaml
src/gateway/storage/: util.py
src/mongodb/manifests/: configmap.yaml  secret.yaml  service.yaml
src/mysql/: init.sql
src/mysql/manifests/: configmap.yaml  secret.yaml  service.yaml  statefulset.yaml
src/notification/: Dockerfile  pyproject.toml
src/notification/manifests/: configmap.yaml  notification-deploy.yaml
