[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["usiqueira"]

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^3.1.0"
jedi = "^0.19.1"
PyJWT = "^2.8.0"
Flask = "^3.0.2"
Flask-MySQLdb = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
