[tool.poetry]
name = "converter"
version = "0.1.0"
description = ""
authors = ["usiqueira"]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
pymongo = "^4.6.2"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
