[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["usiqueira"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
pika = "^1.3.2"
pymongo = "^4.6.2"
Flask-PyMongo = "^2.3.0"
python-decouple = "^3.8"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
